--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo.ico" type="image/icon type">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logo.ico" type="image/icon type">
+    <link rel="stylesheet" href="css/style.css">
     <title>Youtube</title>
 </head>
 <body>
     <div class="header">
         <div class="left">
-            <div class="more"><img src="more.png" alt="more"></div>
-            <div class="youtube-logo">      <a href="#">      <img src="youtube.png" alt="logo" class="">     </a>  </div>
+            <div class="more"><img src="images/more.png" alt="more"></div>
+            <div class="youtube-logo">      <a href="#">      <img src="images/youtube.png" alt="logo" class="">     </a>  </div>
         </div>
 
 
@@ -20,20 +20,15 @@
             <div class="search-box">
                 <input type="text" class="search" placeholder="Search" style="color: white; padding-left: 22px;">
             </div>
-            <div class="search-btn"><div class="search-logo"><img src="search.png" alt="search-logo"></div></div>
-            <div class="mic-btn"><div class="search-logo"><img src="mic.png" alt="mic-logo"></div></div>
+            <div class="search-btn"><div class="search-logo"><img src="images/search.png" alt="search-logo"></div></div>
+            <div class="mic-btn"><div class="search-logo"><img src="images/mic.png" alt="mic-logo"></div></div>
         </div>
-
-        <!-- <div class="left">
-            <div class="more"><img src="more.png" alt="more"></div>
-            <div class="youtube-logo">      <a href="#">      <img src="youtube.png" alt="logo" class="">     </a>  </div>
-        </div> -->
 
 
         <div class="right">
-            <div class="upload-btn"><div class="search-logo"><img src="video-camera.png" alt="mic-logo"></div></div>
-            <div class="notice-btn "><div class="search-logo"><img src="bell.png" alt="mic-logo"></div></div>
-            <div class="user-btn"><div class="search-logo"><img src="croped.png" alt="mic-logo"></div></div>
+            <div class="upload-btn"><div class="search-logo"><img src="images/video-camera.png" alt="mic-logo"></div></div>
+            <div class="notice-btn "><div class="search-logo"><img src="images/bell.png" alt="mic-logo"></div></div>
+            <div class="user-btn"><div class="search-logo"><img src="images/croped.png" alt="mic-logo"></div></div>
         </div>
     </div>
     
