Seperate file for dark and light theme

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
     <div class="header">
         <div class="left">
-            <div class="more"><img src="images/more.png" alt="more"></div>
-            <div class="youtube-logo">      <a href="#">      <img src="images/youtube.png" alt="logo" class="">     </a>  </div>
+            <div class="more"><img src="images-dark/more.png" alt="more"></div>
+            <div class="youtube-logo">      <a href="#">      <img src="images-dark/youtube.png" alt="logo" class="">     </a>  </div>
         </div>
 
 
         <div class="center">
             <div class="search-box">
-                <input type="text" class="search" placeholder="Search" style="color: white; padding-left: 22px;">
+                <input type="text" class="search" placeholder="Search" style="padding-left: 22px;">
             </div>
-            <div class="search-btn"><div class="search-logo"><img src="images/search.png" alt="search-logo"></div></div>
-            <div class="mic-btn"><div class="search-logo"><img src="images/mic.png" alt="mic-logo"></div></div>
+            <div class="search-btn"><div class="search-logo"><img src="images-dark/search.png" alt="search-logo"></div></div>
+            <div class="mic-btn"><div class="search-logo"><img src="images-dark/mic.png" alt="mic-logo"></div></div>
         </div>
 
 
         <div class="right">
-            <div class="upload-btn"><div class="search-logo"><img src="images/video-camera.png" alt="mic-logo"></div></div>
-            <div class="notice-btn "><div class="search-logo"><img src="images/bell.png" alt="mic-logo"></div></div>
-            <div class="user-btn"><div class="search-logo"><img src="images/croped.png" alt="mic-logo"></div></div>
+            <div class="upload-btn"><div class="search-logo"><img src="images-dark/video-camera.png" alt="mic-logo"></div></div>
+            <div class="notice-btn "><div class="search-logo"><img src="images-dark/bell.png" alt="mic-logo"></div></div>
+            <div class="user-btn"><div class="search-logo"><img src="images-dark/croped.png" alt="mic-logo"></div></div>
         </div>
     </div>
     
