implement left navigation menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Youtube</title>
 </head>
+
 <body>
     <div class="header">
         <div class="left">
             <div class="more"><img src="images-dark/more.png" alt="more"></div>
-            <div class="youtube-logo">      <a href="#">      <img src="images-dark/youtube.png" alt="logo" class="">     </a>  </div>
+            <div class="youtube-logo"> <a href="#"> <img src="images-dark/youtube.png" alt="logo" class=""> </a> </div>
         </div>
 
 
@@ -20,17 +22,115 @@
             <div class="search-box">
                 <input type="text" class="search" placeholder="Search" style="padding-left: 22px;">
             </div>
-            <div class="search-btn"><div class="search-logo"><img src="images-dark/search.png" alt="search-logo"></div></div>
-            <div class="mic-btn"><div class="search-logo"><img src="images-dark/mic.png" alt="mic-logo"></div></div>
+            <div class="search-btn">
+                <div class="search-logo"><img src="images-dark/search.png" alt="search-logo"></div>
+            </div>
+            <div class="mic-btn">
+                <div class="search-logo"><img src="images-dark/mic.png" alt="mic-logo"></div>
+            </div>
         </div>
 
 
         <div class="right">
-            <div class="upload-btn"><div class="search-logo"><img src="images-dark/video-camera.png" alt="mic-logo"></div></div>
-            <div class="notice-btn "><div class="search-logo"><img src="images-dark/bell.png" alt="mic-logo"></div></div>
-            <div class="user-btn"><div class="search-logo"><img src="images-dark/croped.png" alt="mic-logo"></div></div>
+            <div class="upload-btn">
+                <div class="search-logo"><img src="images-dark/video-camera.png" alt="mic-logo"></div>
+            </div>
+            <div class="notice-btn ">
+                <div class="search-logo"><img src="images-dark/bell.png" alt="mic-logo"></div>
+            </div>
+            <div class="user-btn">
+                <div class="search-logo"><img src="images-dark/croped.png" alt="mic-logo"></div>
+            </div>
+        </div>
+
+
+
+        <!-- side Bar menu -->
+
+        <div class="sidebar">
+            <div class="top-logo">
+                <div class="more"><img src="images/more1.png" alt="more"></div>
+                <div class="youtube-logo"> <a href="#"> <img src="images/youtube1.png" alt="logo" class=""> </a> </div>
+            </div>
+            <div class="sidebar-content">
+                <div class="icon_with_name">
+                    <img src="/sidebar/home.png" alt="sidebar home">
+                    <p>Home</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/shorts.png" alt="shorts">
+                    <p>Shorts</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/subscribe.png" alt="subscribe">
+                    <p>Subscriptions</p>
+                </div>
+                <hr>
+
+
+                <div class="icon_with_name">
+                    <img src="/sidebar/library.png" alt="subscribe">
+                    <p>Library</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/history.png" alt="subscribe">
+                    <p>History</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/video.png" alt="subscribe">
+                    <p>Your Videos</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/clock.png" alt="subscribe">
+                    <p>Watch Later</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/like.png" alt="subscribe">
+                    <p>Liked Videos</p>
+                </div>
+                <hr>
+                <div class="icon_with_name">
+                    <p style="font-size: 1.4rem;">More From YouTube</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/youtube-logo.png" alt="subscribe">
+                    <p>YouTube Premium</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/creator-studio.png" alt="subscribe">
+                    <p>Creator Studio</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/youtube-music.png" alt="subscribe">
+                    <p>YouTube Music</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/youtube-kids.png" alt="subscribe">
+                    <p>TouTube Kids</p>
+                </div>
+                <div class="icon_with_name">
+                    <img src="/sidebar/youtube-tv.png" alt="subscribe">
+                    <p>YouTube TV</p>
+                </div>
+
+                <hr>
+                <div class="icon_with_name">
+                    <img src="/sidebar/youtube-tv.png" alt="subscribe">
+                    <p>Warning It is copy of youtube for pracice only</p>
+                </div>
+
+                <hr>
+
+
+
+
+            </div>
+
         </div>
     </div>
-    
+
+
+
 </body>
+
 </html>
