correction of file path for icons

--- a/index.html
+++ b/index.html
@@ -54,38 +54,38 @@
             </div>
             <div class="sidebar-content">
                 <div class="icon_with_name">
-                    <img src="/sidebar/home.png" alt="sidebar home">
+                    <img src="sidebar/home.png" alt="sidebar home">
                     <p>Home</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/shorts.png" alt="shorts">
+                    <img src="sidebar/shorts.png" alt="shorts">
                     <p>Shorts</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/subscribe.png" alt="subscribe">
+                    <img src="sidebar/subscribe.png" alt="subscribe">
                     <p>Subscriptions</p>
                 </div>
                 <hr>
 
 
                 <div class="icon_with_name">
-                    <img src="/sidebar/library.png" alt="subscribe">
+                    <img src="sidebar/library.png" alt="subscribe">
                     <p>Library</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/history.png" alt="subscribe">
+                    <img src="sidebar/history.png" alt="subscribe">
                     <p>History</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/video.png" alt="subscribe">
+                    <img src="sidebar/video.png" alt="subscribe">
                     <p>Your Videos</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/clock.png" alt="subscribe">
+                    <img src="sidebar/clock.png" alt="subscribe">
                     <p>Watch Later</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/like.png" alt="subscribe">
+                    <img src="sidebar/like.png" alt="subscribe">
                     <p>Liked Videos</p>
                 </div>
                 <hr>
@@ -93,29 +93,29 @@
                     <p style="font-size: 1.4rem;">More From YouTube</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/youtube-logo.png" alt="subscribe">
+                    <img src="sidebar/youtube-logo.png" alt="subscribe">
                     <p>YouTube Premium</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/creator-studio.png" alt="subscribe">
+                    <img src="sidebar/creator-studio.png" alt="subscribe">
                     <p>Creator Studio</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/youtube-music.png" alt="subscribe">
+                    <img src="sidebar/youtube-music.png" alt="subscribe">
                     <p>YouTube Music</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/youtube-kids.png" alt="subscribe">
+                    <img src="sidebar/youtube-kids.png" alt="subscribe">
                     <p>TouTube Kids</p>
                 </div>
                 <div class="icon_with_name">
-                    <img src="/sidebar/youtube-tv.png" alt="subscribe">
+                    <img src="sidebar/youtube-tv.png" alt="subscribe">
                     <p>YouTube TV</p>
                 </div>
 
                 <hr>
                 <div class="icon_with_name">
-                    <img src="/sidebar/youtube-tv.png" alt="subscribe">
+                    <img src="sidebar/youtube-tv.png" alt="subscribe">
                     <p>Warning It is copy of youtube for pracice only</p>
                 </div>
 
