apply some properties for responsiveness

--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
             </div>
 
         </div>
+        <div class="tablet-icons" style="flex-direction: column;">
+            <div class="icon_with_name">
+                <img src="sidebar/home.png" alt="sidebar home">
+                <p>Home</p>
+            </div>
+            <div class="icon_with_name">
+                <img src="sidebar/shorts.png" alt="shorts">
+                <p>Shorts</p>
+            </div>
+            <div class="icon_with_name">
+                <img src="sidebar/subscribe.png" alt="subscribe">
+                <p>Subscriptions</p>
+            </div>
+            <div class="icon_with_name">
+                <img src="sidebar/library.png" alt="subscribe">
+                <div><p>Library</p></div>
+            </div>
+        </div>
     </div>
 
 
