correct path for image files

--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     <div class="video-content">
         <div class="video-wrap">
             <div class="thumbnail">
-                <img src="/mainpage/thumnail.jpg" alt="thumnail">
+                <img src="mainpage/thumnail.jpg" alt="thumnail">
             </div>
 
             <div class="video-title-group">
                 <div class="user-pic">
-                    <img src="/images/croped.png" alt="user-account-pic">
+                    <img src="images/croped.png" alt="user-account-pic">
                 </div>
                 <div class="video-title">
                     <p>Title of Video</p>
@@ -173,12 +173,12 @@
         </div>
         <div class="video-wrap">
             <div class="thumbnail">
-                <img src="/mainpage/thumnail.jpg" alt="thumnail">
+                <img src="mainpage/thumnail.jpg" alt="thumnail">
             </div>
 
             <div class="video-title-group">
                 <div class="user-pic">
-                    <img src="/images/croped.png" alt="user-account-pic">
+                    <img src="images/croped.png" alt="user-account-pic">
                 </div>
                 <div class="video-title">
                     <p>Title of Video</p>
@@ -189,12 +189,12 @@
         </div>
         <div class="video-wrap">
             <div class="thumbnail">
-                <img src="/mainpage/thumnail.jpg" alt="thumnail">
+                <img src="mainpage/thumnail.jpg" alt="thumnail">
             </div>
 
             <div class="video-title-group">
                 <div class="user-pic">
-                    <img src="/images/croped.png" alt="user-account-pic">
+                    <img src="images/croped.png" alt="user-account-pic">
                 </div>
                 <div class="video-title">
                     <p>Title of Video</p>
@@ -205,12 +205,12 @@
         </div>
         <div class="video-wrap">
             <div class="thumbnail">
-                <img src="/mainpage/thumnail.jpg" alt="thumnail">
+                <img src="mainpage/thumnail.jpg" alt="thumnail">
             </div>
 
             <div class="video-title-group">
                 <div class="user-pic">
-                    <img src="/images/croped.png" alt="user-account-pic">
+                    <img src="images/croped.png" alt="user-account-pic">
                 </div>
                 <div class="video-title">
                     <p>Title of Video</p>
